# bitscan

./: CMakeLists.txt
tests/: test_bitstrings.cpp  test_masking.cpp
